samples/_failures_safe/1761703304_ffca6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_108bff53.c: In function ‘main’:
./samples/SAFE/__tmp_108bff53.c:179:5: error: expected declaration or statement at end of input
  179 |     char input[256];
      |     ^~~~
